examples/test/testpolicy13894.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13894
  namespace: namespace342
spec:
  podSelector:
    matchLabels:
      key18: value31
      key17: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value31
          key3: value16
      podSelector:
        matchLabels:
          key6: value35
